docs/examples/invalid/semanticErr/extension/void-type/declaringVoidType.wacc
# declaring a variable as void is an error

# Output:
# #semantic_error#

# Exit:
# 200

# Program:

begin
  void a = 1
end

